--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,36 @@
+attrs==21.2.0
+autobahn==21.3.1
+Automat==20.2.0
+cffi==1.14.5
+constantly==15.1.0
+cryptography==3.4.7
+cycler==0.10.0
+future==0.18.2
+hyperlink==21.0.0
+idna==3.2
+incremental==21.3.0
+joblib==1.0.1
+kiwisolver==1.3.1
+llvmlite==0.36.0
+matplotlib==3.4.2
+networkx==2.6.2
+numba==0.53.1
 numpy==1.21.0
 opencv-python==4.5.2.54
+Pillow==8.2.0
+pycparser==2.20
+pyparsing==2.4.7
+python-dateutil==2.8.1
+qulati==2.0
 scikit-learn==0.24.2
+scipy==1.7.0
+six==1.16.0
+threadpoolctl==2.1.0
+trimesh==3.9.24
+Twisted==21.2.0
+twisted-iocpsupport==1.0.1
+txaio==21.2.1
 vedo==2021.0.3
+vtk==9.0.2
+wslink==0.2.0
+zope.interface==5.4.0
