--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ attrs==21.2.0
 autobahn==21.3.1
 Automat==20.2.0
 cffi==1.14.5
+colour-science==0.3.16
 constantly==15.1.0
 cryptography==3.4.7
 cycler==0.10.0
 future==0.18.2
 hyperlink==21.0.0
 idna==3.2
+imageio==2.9.0
 incremental==21.3.0
 joblib==1.0.1
 kiwisolver==1.3.1
@@ -21,11 +23,14 @@ Pillow==8.2.0
 pycparser==2.20
 pyparsing==2.4.7
 python-dateutil==2.8.1
+PyWavelets==1.1.1
 qulati==2.0
+scikit-image==0.18.2
 scikit-learn==0.24.2
 scipy==1.7.0
 six==1.16.0
 threadpoolctl==2.1.0
+tifffile==2021.7.30
 trimesh==3.9.24
 Twisted==21.2.0
 twisted-iocpsupport==1.0.1
