--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pyparsing==2.4.7
 python-dateutil==2.8.1
 PyWavelets==1.1.1
 qulati==2.0
+robust-laplacian==0.2.2
 scikit-image==0.18.2
 scikit-learn==0.24.2
 scipy==1.7.0
