--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 data/
 *results/
 quLATi/
+wip/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -17,3 +18,4 @@ venv.bak/
 *.npy
 *.xlsx
 *.pdf
+*.zip
